
	* lftp.cc, Job.cc, Job.h, SMTask.cc, SMTask.h, SleepJob.cc, SleepJob.h:
	  add notification for moving to background; terminate some never-ending
	  jobs before moving to bg.
	* resource.cc: change default for ftp:fix-pasv-address to true.
	* Http.cc, Http.h: support keep-alive for chunked transfer-encoding.
	* ftpclass.cc, ftpclass.h: fix reget for non-existent files.

2001-05-29  albert chin (china@thewrittenword.com)

	* Fish.cc, Http.cc, StatusLine.cc, log.cc: use trio functions if needed.

2001-05-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* complete.cc: (vars_generator) special generator for variable
	  names to match variable name using ResMgr::VarNameCmp.

2001-05-29  Nicolas Noble <Pixel@the-babel-tower.nobis-crew.org>

	* complete.cc, ResMgr.cc, ResMgr.h: add variable name completion
	  support.

2001-05-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: support `mirror -R -c'.
	* resource.cc: some more patterns for retry-530.

2001-05-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* resource.cc: new settings ftp:retry-530 and ftp:retry-530-anonymous.
	  This settings should be useful to distinguish between overloaded
	  server (temporary condition) and incorrect password (permanent
	  condition).
	* ftpclass.cc: retry on server reply 530 for PASS command if text
	  matches above regular expressions. Retry ftp login quickly on next
	  address if the server has many (works well on ftp.redhat.com, for
	  example).
	* ResMgr.cc, ResMgr.h: improved fuzzy variable name matching. Exact
	  prefix and exact name after prefix are taken into account separately.
	  E.g. http:pro is not ambigous now between http:proxy and https:proxy.
	* misc.cc, misc.h: move re_match here.

2001-05-10  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: delete status_line in dtor.
	* CmdExec.h: SetStatusLine new method.
	* FileAccess.cc, FileAccess.h: SessionPool:ClearAll new method.