@@ -6,6 +6,9 @@
 	* resource.cc: change default for ftp:fix-pasv-address to true.
 	* Http.cc, Http.h: support keep-alive for chunked transfer-encoding.
 	* ftpclass.cc, ftpclass.h: fix reget for non-existent files.
+	* Resolver.cc: report number of addresses.
+	* SMTask.cc: tune Schedule for recursive calling by setting sched_scan
+	  to current.
 
 2001-05-29  albert chin (china@thewrittenword.com)
 
